2009-09-10  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

Reviewed by Darin Adler.

        ARM compiler does not understand GCC visibility attribute
        https://bugs.webkit.org/show_bug.cgi?id=29079

        * API/JSBase.h: Make the test more specific to hit only
        the GCC compiler



Canonical link: https://commits.webkit.org/39820@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48251 268f45cc-cd09-0410-ab3c-d52691b4dbfc